Overlap Solved

--- a/snec/src/components/ReportDownloader/ReportDownloader.css
+++ b/snec/src/components/ReportDownloader/ReportDownloader.css
@@ -98,7 +98,7 @@ h3{
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 999;
+  z-index: 900;
 }
 
 .modal-content {
